Created basic UI for login page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome to FixIT!</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Welcome to FixIT</title>
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+    <!-- Custom styles for this template -->
+    <link href="../styles/signin.css" rel="stylesheet">
 </head>
+
 <body>
-<p th:text="'HeLlO SOHEL WeLcOmE tO FiXIt!'" />
+
+<div class="container">
+
+    <form class="form-signin">
+        <h2 class="form-signin-heading">FixIT</h2>
+        <input type="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    </form>
+
+</div> <!-- /container -->
+
+<div id="sign-up-link" class="container">
+    <span>New User? <a href="#">Sign Up</a></span>
+</div>
+
+<div id="become-consultant" class="container">
+    <span><a href="#">Become a FixIT Consultant</a></span>
+</div>
 
 </body>
 </html>
