it be sticky now

--- a/src/main/resources/templates/staff-home.html
+++ b/src/main/resources/templates/staff-home.html
@@ -44,7 +44,10 @@
 <div class="container">
     <div class="staff-home">
         <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <p class="lead">
+            Use this document as a way to quickly start any new project.
+            <br> All you get is this text and a mostly barebones HTML document.
+        </p>
     </div>
 </div><!-- /.container -->
 </body>
