Changed the type back to password for the little dots

--- a/src/main/resources/templates/signup-customer.html
+++ b/src/main/resources/templates/signup-customer.html
@@ -26,8 +26,8 @@
         <h2 class="form-signin-heading">Sign up now!</h2>
         <input id="inputUsername" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input id="inputPassword" class="form-control" placeholder="Password" required>
-        <input id="inputPassword2" class="form-control" placeholder="Confirm Password" required>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword2" class="form-control" placeholder="Confirm Password" required>
         <input id="email" class="form-control" placeholder="Email" required>
         <input id="firstname" class="form-control" placeholder="First Name" required>
         <input id="lastname" class="form-control" placeholder="Last Name" required>
