--- a/src/main/resources/styles/customer-account.css
+++ b/src/main/resources/styles/customer-account.css
@@ -2,7 +2,7 @@ body {
   min-height: 2000px;
   padding-top: 70px;
 }
-.customer-profile {
+.customer-account {
   padding: 40px 15px;
   text-align: center;
 }
