Started JS to populate staff appointments

--- a/src/main/resources/templates/staff-home.html
+++ b/src/main/resources/templates/staff-home.html
@@ -48,6 +48,7 @@
             Use this document as a way to quickly start any new project.
             <br> All you get is this text and a mostly barebones HTML document.
         </p>
+        <ul id ="staffAppointmentList"></ul>
     </div>
 </div><!-- /.container -->
 </body>
