--- a/src/main/resources/templates/customer-account.html
+++ b/src/main/resources/templates/customer-account.html
@@ -43,10 +43,9 @@
 
 <div class="container">
     <div class="customer-account">
-        <h1>Bootstrap starter template</h1>
+        <h1>Edit</h1>
         <p class="lead">
-            Use this document as a way to quickly start any new project.
-            <br> All you get is this text and a mostly barebones HTML document.
+            yeet
         </p>
     </div>
 </div><!-- /.container -->
