got styles working

--- a/src/main/resources/templates/customer-home.html
+++ b/src/main/resources/templates/customer-home.html
@@ -15,10 +15,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="../styles/home.css" rel="stylesheet">
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}">
 </head>
-
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
