--- a/src/main/resources/templates/general.html
+++ b/src/main/resources/templates/general.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="../styles/home.css" rel="stylesheet">
+    <link href="../static/css/home.css" rel="stylesheet">
 
 </head>
 <body>
