--- a/src/main/resources/templates/signup-staff.html
+++ b/src/main/resources/templates/signup-staff.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="../styles/signin.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/customer-signup.css}">
 
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -26,11 +26,10 @@
 <div class="container">
 
     <form class="form-signin" id="signup-form">
-        <h2 class="form-signin-heading">FixIT Staff Signup</h2>
+        <h2 class="form-signin-heading">FixIT Staff Sign-Up</h2>
         <input id="inputUsername" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <label for="inputPasswordCon" class="sr-only">Confirm Password</label>
         <input type="password" id="inputPasswordCon" class="form-control" placeholder="Confirm Password" required>
         <input id="inputEmail" class="form-control" placeholder="Email" required autofocus>
         <input id="inputFirstName" class="form-control" placeholder="First Name" required autofocus>
