--- a/src/main/resources/templates/signup-customer.html
+++ b/src/main/resources/templates/signup-customer.html
@@ -24,7 +24,7 @@
 
 <div class="container">
     <form class="form-signin" id="signup-form">
-        <h2 class="form-signin-heading">FixIT Sign-Up</h2>
+        <h2 class="form-signin-heading">FixIT User Sign-Up</h2>
         <input id="inputUsername" class="form-control" placeholder="Username" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
@@ -38,6 +38,11 @@
         <button class="btn btn-lg btn-primary btn-block" id="customer-signup-button" type="button">Sign up</button>
     </form>
 </div> <!-- /container -->
+
+<div id="return-home-link" class="container">
+    <span>Already have an account? <a href="http://localhost:8080/login">Return to login.</a></span>
+</div>
+
 </body>
 </html>
 
