--- a/src/main/resources/templates/signup-staff.html
+++ b/src/main/resources/templates/signup-staff.html
@@ -20,11 +20,9 @@
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
-
 <body>
 
 <div class="container">
-
     <form class="form-signin" id="signup-form">
         <h2 class="form-signin-heading">FixIT Staff Sign-Up</h2>
         <input id="inputUsername" class="form-control" placeholder="Username" required autofocus>
@@ -41,7 +39,7 @@
 </div> <!-- /container -->
 
 <div id="return-home-link" class="container">
-    <span>Already have an account? <a href="#">Return to login.</a></span>
+    <span>Already have an account? <a href="http://localhost:8080/login">Return to login.</a></span>
 </div>
 
 </body>
