bare bones of sumthin

--- a/src/main/resources/templates/customer-account.html
+++ b/src/main/resources/templates/customer-account.html
@@ -42,10 +42,20 @@
 </nav>
 
 <div class="container">
-    <div class="customer-account">
-        <h1>Edit</h1>
+    <br class="customer-account">
+        <h1 align = "center">Account</h1>
         <p class="lead">
-            yeet
+            <div align = "left">Username:</div>
+            <br>
+            <div align = "left">Email:</div>
+            <br>
+            <div align = "left">Name:</div>
+            <br>
+            <div align = "left">Address:</div>
+            <br>
+            <div align = "left">Credit Card #:</div>
+            <br>
+        <button class="btn btn-lg btn-info btn-block" id="customer-edit-account-details" type="submit">Edit Account Details</button>
         </p>
     </div>
 </div><!-- /.container -->
