--- a/src/main/resources/templates/customer-account-edit.html
+++ b/src/main/resources/templates/customer-account-edit.html
@@ -46,21 +46,31 @@
         <form class="form-signin">
             <!-- TODO populate placeholders to actual account values -->
             <h2 class="form-signin-heading">Edit Account Details</h2>
-            <input type="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>
+            <input id="inputUsername" class="form-control" placeholder="Username" required autofocus>
             </br>
+
             <label for="inputPassword" class="sr-only">Password</label>
+            </br>
+
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-
-            <label for="inputPasswordCon" class="sr-only">Confirm Password</label>
-            <input type="password" id="inputPasswordCon" class="form-control" placeholder="Confirm Password" required>
-
-            <input type="username" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
             </br>
 
-            <input type="username" id="inputName" class="form-control" placeholder="Name" required autofocus>
+            <input type="password" id="inputPassword2" class="form-control" placeholder="Confirm Password" required>
             </br>
 
-            <input type="username" id="inputAddress" class="form-control" placeholder="Address" required autofocus>
+            <input id="email" class="form-control" placeholder="Email" required>
+            </br>
+
+            <input id="firstname" class="form-control" placeholder="First Name" required>
+            </br>
+
+            <input id="lastname" class="form-control" placeholder="Last Name" required>
+            </br>
+
+            <input id="address" class="form-control" placeholder="Address" optional>
+            </br>
+
+            <input id="creditcard" class="form-control" placeholder="Credit Card #" required>
             </br>
 
             <button class="btn btn-lg btn-danger" id="customer-account-edit-cancel" type="submit">Cancel</button>
